# Plugin

./: .gitignore  AGENTS.md  Acqboard.h  Acqboardredpitaya.h  CLAUDE.md  README.md  Rajagopal2015_opensense_calibrated.osim  RedPitaya_justin.c  SAMPLE_RATE_BUG_ANALYSIS.md  _neutral_frame.sto  acqboard.ccp  axi_header.h  device editor.cpp  device editor.h  devicethread.cpp  diagnose_oe_udp.py  ephys_imuIK_Setup.xml  ephys_to_opensim_bridge.py  fix-opensim-paths.ps1  imu_registers.h  install-everything.ps1  noise_analysis.c  noise_analysis.h  opensim_display_joint.json  opensim_joint_catalog.h  opensim_joint_catalog.py  opensim_live_realtime.py  opensim_sensor_map.json  opensim_startup.log.err  opensim_target_angles.json  run_bridge.bat  sensor_fusion.c  sensor_fusion.h  setup-local.ps1  test_udp_sender.py  udp_receive_test.py  vqf.c  vqf.h
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
docs/: 2026-04-27-change-documentation.md  REPO_EXPLAINED.md  esp32-acqboard-integration.md  i2c-optimization-plan.md  (+7 more)
esp32/firmware/main/: CMakeLists.txt  Kconfig.projbuild  camera_verify.c  camera_verify.h  dio_input.c  dio_input.h  espnow_sync.c  espnow_sync.h  icm20948.c  icm20948.h  main.c  open_ephys_stream.c  open_ephys_stream.h  sd_logger.c  sd_logger.h
esp32s3/main/: CMakeLists.txt  action_verify.c  camera_ar0234.c  dio.c  espnow_sync.c  imu_icm20948.c  main.c  network_stream.c  sdcard_log.c  sensor_fusion_port.c
esp32s3/main/include/: camera_ar0234.h  config.h  espnow_sync.h  imu_icm20948.h  network_stream.h  sdcard_log.h
(+128 files in other folders)
